--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link rel="icons" href="icons.json">
     <!-- include an external JavaScript file -->
     <script src="index.js"></script>
-
+    <!-- <script src="sw.js"></script> -->
   </head>
   
   <body>
-
+<button id="installButton" style="display: none;">Install App</button>
 
     <audio id="myAudio" controls>
       <source src="Oliver-Tray-Pineapple.ogg" type="audio/ogg">
@@ -33,7 +33,9 @@
   
 <br><br>
    <div id="bars">
-    <div class="difftext">Difficulty Level:</div>
+    <div class="difftext">Difficulty Level:
+      
+    </div>
     <div class="diffbar">
       
 
