--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icons" href="icons.json">
     <!-- include an external JavaScript file -->
     <script src="index.js"></script>
-    <!-- <script src="sw.js"></script> -->
+    <script src="sw.js"></script>
   </head>
   
   <body>
@@ -34,7 +34,7 @@
 <br><br>
    <div id="bars">
     <div class="difftext">Difficulty Level:
-      
+
     </div>
     <div class="diffbar">
       
