--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 <button id="installButton" style="display: none;">Install App</button>
 
     <audio id="myAudio" controls>
-      <source src="Oliver-Tray-Pineapple.ogg" type="audio/ogg">
-      <source src="Oliver Tray - Pineapple.wav" type="audio/wav">
+      <source src="Oliver Tray - Pineapple.wav" alt="video" type="audio/wav">
     </audio>
     
 
