--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <button id="installButton" style="display: none;">Install App</button>
 
     <audio id="myAudio" controls>
-      <source src="Oliver Tray - Pineapple.wav" alt="video" type="audio/wav">
+      <source src="Oliver-Tray-Pineapple.ogg" alt="video" type="audio/ogg">
     </audio>
     
 
