--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <audio id="myAudio" controls>
       <source src="Oliver-Tray-Pineapple.ogg" alt="video" type="audio/ogg">
+      <source src="Oliver Tray - Pineapple.wav" alt="video" type="audio/wav">
     </audio>
     
 
