--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     
     <!-- include an external style sheet -->
     <link rel="stylesheet" href="style.css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >  
-    <link rel="manifest" href="manifest1.json">
-    <link rel="icons" href="icons1.json">
+    <link rel="manifest" href="manifest.json">
+    <link rel="icons" href="icons.json">
     <!-- include an external JavaScript file -->
     <script src="index.js"></script>
-    <script src="sw1.js"></script>
+    <script src="sw.js"></script>
   </head>
   
   <body>
