--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   </head>
   
   <body>
-
+<button id="installButton" style="display: none;">Install App</button>
 
     <audio id="myAudio" controls>
-      <source src="Oliver-Tray-Pineapple.ogg" type="audio/ogg">
-      <source src="Oliver Tray - Pineapple.wav" type="audio/wav">
+      <source src="Oliver-Tray-Pineapple.ogg" alt="video" type="audio/ogg">
+      <source src="Oliver Tray - Pineapple.wav" alt="video" type="audio/wav">
     </audio>
     
 
@@ -33,7 +33,9 @@
   
 <br><br>
    <div id="bars">
-    <div class="difftext">Difficulty Level:</div>
+    <div class="difftext">Difficulty Level:
+
+    </div>
     <div class="diffbar">
       
 
@@ -57,9 +59,9 @@
   <div class="content">
     <br><br>
     <select id="difficulty">
-      <option id="button" href="#lvl-3">Easy</option>
-      <option id="button" href="#lvl-4">Medium</option>
-      <option id="button" href="#lvl-5">Hard</option>
+      <option id="easy" value="easy">Easy</option>
+      <option id="medium" value="medium">Medium</option>
+      <option id="hard" value="hard">Hard</option>
   </select>
   <button id="start-game" onclick="startGame()">Start Game</button>
   <div id="trivia-container"></div>
