--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
    
   <div class="content">
     <br><br>
-    <select id="difficulty">
+    <select id="easy">
       <option id="easy" value="easy">Easy</option>
       <option id="medium" value="medium">Medium</option>
       <option id="hard" value="hard">Hard</option>
