--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>QUIZ GAME!</title>
     
     <!-- include an external style sheet -->
-    <link rel="stylesheet" href="style.css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >  
+    <link rel="stylesheet" href="style.css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" > 
+    <link rel="icon" type="image/x-icon" href="quiz1.png" style="width:600px"> 
     <link rel="manifest" href="manifest.json">
     <link rel="icons" href="icons.json">
     <!-- include an external JavaScript file -->
@@ -42,13 +43,6 @@
       <option id="hard" value="hard">Hard</option>
   </select>
 
-  
-
-
-
-
-
-
   <select id="catagories">
     <option id="Animal" value="Animals">Animals</option>
     <option id="Anime" value="Animae">Anime</option>
@@ -72,6 +66,13 @@
     </option>
     
 </select>
+
+
+
+
+
+
+ 
 
 
 
